# RPG_game

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-tools.txt
src/rpg_game/: __init__.py  config.py  game.py  localization.py  main.py
src/rpg_game/locales/: en.json  es.json
src/rpg_game/ui/: menu.py
